<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_3">

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_tag_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_5"
                android:text="@string/untagged_20"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/text_size_16"
                app:fontName="@string/helvetica_neue_normal" />

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dp_5"
                android:text="@string/rs_2_450"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/text_size_16"
                app:fontName="@string/helvetica_neue_normal" />

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_see_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:drawableEnd="@drawable/icon32"
                android:gravity="center_vertical"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/text_size_12"
                app:fontName="@string/helvetica_neue_light" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_home_data"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="130dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_sub_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5" />

        </LinearLayout>
    </LinearLayout>
</layout>
