<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <com.zoddl.widgets.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_3"
            android:text="15/06/16 - Rs 2500:"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_size_16"
            app:fontName="@string/helvetica_neue_normal" />

        <com.zoddl.widgets.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/dp_2"
            android:padding="@dimen/dp_3"
            android:text="@string/manual_payment_accounting"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_size_14"
            app:fontName="@string/helvetica_neue_light" />
    </LinearLayout>
</layout>
