<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="@dimen/dp_5">

        <com.zoddl.widgets.MyCheckBox
            android:id="@+id/cb_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/button_toogle1"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_3"
            android:text="@string/plan_a_rs_1000_per_month"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_size_16"
            app:fontName="@string/helvetica_neue_normal" />

        <com.zoddl.widgets.MyTextView
            android:id="@+id/tv_plan_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/dp_2"
            android:padding="@dimen/dp_3"
            android:textColor="@color/colorDarkGray"
            android:textSize="@dimen/text_size_14"
            app:fontName="@string/helvetica_neue_light" />

    </LinearLayout>
</layout>
