<?xml version="1.0" encoding="UTF-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include
            android:id="@+id/header_toolbar"
            layout="@layout/header_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_32">

            <com.zoddl.widgets.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/please_enter_the_otp_send_to_your_registered_mobile_number"
                android:textColor="@color/colorDarkGray"
                android:textSize="@dimen/text_size_18"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.PinEntryView
                android:id="@+id/pin_entry_simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_20"
                app:accentRequiresFocus="true"
                app:accentType="all"
                app:digitBackground="@drawable/pin_box"
                app:digitTextColor="@color/colorDarkGray"
                app:digitTextSize="@dimen/text_size_18"
                app:numDigits="4"
                app:pinAccentColor="@color/colorDarkGray"
                app:pinInputType="number" />

            <com.zoddl.widgets.MyButton
                android:id="@+id/btn_submit"
                style="@style/AppTheme.Button"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/submit"
                app:fontName="@string/calibri_bold" />

        </LinearLayout>
    </LinearLayout>
</layout>
