<?xml version="1.0" encoding="UTF-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <include
            android:id="@+id/header_toolbar"
            layout="@layout/header_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp_32">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/zoddl_title" />

            <com.zoddl.widgets.MyEditText
                android:id="@+id/et_old_pass"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_50"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_old_pass_error"
                style="@style/AppTheme.EditTextError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyEditText
                android:id="@+id/et_new_pass"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="16"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_new_pass_error"
                style="@style/AppTheme.EditTextError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyEditText
                android:id="@+id/et_confirm_pass"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="16"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyTextView
                android:id="@+id/tv_confirm_pass_error"
                style="@style/AppTheme.EditTextError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontName="@string/helvetica_neue_light" />

            <com.zoddl.widgets.MyButton
                android:id="@+id/btn_submit"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/submit"
                app:fontName="@string/calibri_bold" />

        </LinearLayout>
    </LinearLayout>
</layout>
